muda a cor e a fonte de todos os h3

--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-3/style.css
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-3/style.css
@@ -21,3 +21,8 @@ div:nth-of-type(4){
 div:nth-of-type(5){
     background-color: hotpink;
 }
+
+h3 {
+    color: whitesmoke;
+    font-family:sans-serif;
+}
