--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-3/style.css
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-3/style.css
@@ -4,6 +4,7 @@ div:hover{
 
 div:nth-of-type(1){
     background-color: blueviolet;
+    font-style: italic;
 }
 
 div:nth-of-type(2){
@@ -13,6 +14,7 @@ div:nth-of-type(2){
 div:nth-of-type(3){
     background-color: greenyellow;
     height: 50px;
+    font-style: italic;
 }
 
 div:nth-of-type(4){
@@ -21,6 +23,7 @@ div:nth-of-type(4){
 
 div:nth-of-type(5){
     background-color: hotpink;
+    font-style: italic;
 }
 
 h3 {
