--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
@@ -9,3 +9,12 @@ ol li:nth-of-type(2n){
 ol li:nth-of-type(2n + 1){
     text-transform: uppercase;
 }
+
+.font-red{
+    color: red;
+}
+
+.font-red em{
+    font-size: 40px;
+    border: 1px solid black;
+}
