--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
@@ -18,3 +18,11 @@ ol li:nth-of-type(2n + 1){
     font-size: 40px;
     border: 1px solid black;
 }
+
+li{
+   font-size: 20px;
+}
+
+li em{
+    font-weight: bold;
+}
