--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
@@ -26,3 +26,11 @@ li{
 li em{
     font-weight: bold;
 }
+
+.languages li:nth-child(-n +3){
+    color: blue;
+}
+
+.languages li:nth-child(2){
+    background-color: pink;
+}
