--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/style.css
@@ -34,3 +34,28 @@ li em{
 .languages li:nth-child(2){
     background-color: pink;
 }
+
+.stackOverFLow:hover{
+    font-weight: bold;
+    color: orange;
+}
+
+.w3c:hover{
+    font-weight: bold;
+    color: green;
+}
+
+.mdn:hover{
+    font-weight: bold;
+    color: black;
+}
+
+.devDocs:hover{
+    font-weight: bold;
+    color: yellow;
+}
+
+.trybe:hover{
+    font-weight: bold;
+    color: green;
+}
