--- a/01-fundamentos/Bloco6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte2/style.css
+++ b/01-fundamentos/Bloco6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte2/style.css
@@ -78,6 +78,8 @@ body {
   flex-direction: column;
   margin: 20px;
   flex-basis: 350px;
+  justify-content: center;
+  flex: 1;
 }
 
 .aside-container h3, h4 {
