--- a/01-fundamentos/Bloco6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.css
+++ b/01-fundamentos/Bloco6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.css
@@ -46,8 +46,8 @@ aside ul li {
   background-color: lightgrey;
   border-bottom: 1px solid whitesmoke;
   margin-bottom: 10px;
-  width: 90%;
   box-shadow: 0 1px 2px grey;
+  width: 90%;
 }
 
 article p {
@@ -62,4 +62,42 @@ article p {
 footer p {
   padding: 10px;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+  }
+
+  header p {
+    margin: 0 0 0 10px;
+  }
+
+  header nav ul {
+    flex-direction: row;
+    }
+
+  header nav ul li {
+    margin-right: 10px;
+  }
+
+  aside {
+   width: 90%;
+   margin: auto;
+  }
+  aside ul {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  aside ul li {
+    width: 30%;
+    height: 62px;
+  }
+
 }
