--- a/01-fundamentos/Bloco6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.css
+++ b/01-fundamentos/Bloco6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise2.css
@@ -64,7 +64,7 @@ footer p {
   text-align: center;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) {
   header {
     display: flex;
     justify-content: space-around;
@@ -100,4 +100,25 @@ footer p {
     height: 62px;
   }
 
+}
+
+@media screen and (min-width: 1024px) {
+
+  body {
+    max-width: 1024px;
+    margin: auto;
+  }
+
+  header p, aside h2 {
+    font-size: 2em;
+  }
+
+  header nav ul li {
+    font-size: 1.5em;
+    cursor: pointer;
+  }
+
+  header nav ul li:hover {
+    color: lightcoral;
+  }
 }
